Fix gradient color on Safari

--- a/website/static/sass/style.sass
+++ b/website/static/sass/style.sass
@@ -278,7 +278,7 @@ h3
   li:nth-of-type(4)
     &::after
       content: ''
-      background: linear-gradient(transparent, white)
+      background: linear-gradient(rgba(255, 255, 255, 0), white)
       position: absolute
       top: 0
       left: 0
